--- a/css/custom.css
+++ b/css/custom.css
@@ -50,3 +50,367 @@
   .music-btn:hover {
     background-color: #f50057;
   }
+
+
+ /*--------------------------------------------------------------
+#0.6	invitation-section 
+--------------------------------------------------------------*/
+.invitation-section .invitation-box {
+  background: #fff;
+  max-width: 580px;
+  padding: 120px 70px;
+  -webkit-box-shadow: 0px 3px 24px 0px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 3px 24px 0px rgba(0, 0, 0, 0.06);
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+}
+
+.invitation-section .calendar-box {
+	padding-top: 70px;
+    padding-bottom: 90px;
+}
+
+.invitation-section .calendar-box .mini_calendar{
+	padding-bottom: 20px;
+    border-bottom: 1px solid #E3E3E6;
+}
+
+.invitation-section .calendar-box table{
+	width: 100%;
+}
+
+.invitation-section .calendar-box table th{
+	text-align: center;
+    padding: 8px 0;
+    color: #484747;
+    border-top: 1px solid #CFCFD0;
+    border-bottom: 1px solid #CFCFD0;
+    font-size: 0.9em;
+    font-weight: normal;
+}
+.invitation-section .calendar-box .mini_calendar table tr:nth-child(2) td {
+    padding-top: 20px;
+    height: 60px;
+}
+.invitation-section .calendar-box .mini_calendar td {
+    font-size: 0.9em;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+    color: #484747;
+}
+.invitation-section .calendar-box .mini_calendar .calendar-month {
+    text-align: center;
+    margin-bottom: 5px;
+    font-weight: 600;
+    color: #203447;
+    text-transform: uppercase;
+}
+.invitation-section .calendar-box .mini_calendar td #today{
+	display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 20px;
+    padding: 5px;
+    background-color: rgb(200, 157, 156);
+    color: #fff;
+    border-radius: 50%;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box {
+    max-width: 500px;
+    margin: 50px auto;
+    height: auto!important;
+  }
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box {
+    /*max-width: 300px;*/
+    padding: 50px 40px;
+    margin: 50px auto;
+  }
+  
+  .invitation-section .invitation-box.left {margin-top:0;}
+  .invitation-section .invitation-box.calendar-box {margin-bottom:0;}
+}
+
+.invitation-section .invitation-box:before {
+  content: "";
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  border: 5px solid rgb(129 103 103 / 40%);
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box:before {
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    border: 3px solid rgb(129 103 103 / 70%);
+  }
+}
+
+.invitation-section .invitation-box .inner {
+  position: relative;
+}
+
+.invitation-section .invitation-box .left-vec {
+  /* background: url("../images/invitation-left-img.png") center center/cover no-repeat local; */
+  width: 220px;
+  height: 414px;
+  position: absolute;
+  left: -150px;
+  top: -100px;
+  z-index: -1;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box .left-vec {
+    width: 150px;
+    height: 281px;
+    position: absolute;
+    left: -80px;
+    top: -80px;
+  }
+}
+
+.invitation-section .invitation-box .right-vec {
+  /* background: url("../images/invitation-right-image.png") center center/cover no-repeat local; */
+  width: 400px;
+  height: 508px;
+  position: absolute;
+  right: -120px;
+  bottom: -100px;
+  z-index: -1;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box .right-vec {
+    width: 300px;
+    height: 381px;
+    right: -80px;
+    bottom: -50px;
+  }
+}
+.invitation-section .calendar-box .left-vec {display:none;}
+.invitation-section .invitation-box.left .right-vec {display:none;}
+@media (min-width: 992px) {
+	
+}
+
+.invitation-section .invitation-box h2 {
+  font-family: "Great Vibes", cursive;
+  font-size: 50px;
+  font-size: 3.33333rem;
+  margin: 0 0 0.6em;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box h2 {
+    font-size: 40px;
+    font-size: 2.66667rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box h2 {
+    font-size: 28px;
+    font-size: 1.86667rem;
+  }
+}
+
+.invitation-section .invitation-box h2 + span {
+  font-size: 16px;
+  font-size: 1.06667rem;
+  font-weight: 300;
+  color: #797979;
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box h2 + span {
+    font-size: 14px;
+    font-size: 0.93333rem;
+  }
+}
+
+.invitation-section .invitation-box h3 {
+  /*font-size: 32px;*/
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 0.83em 0 1em;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box h3 {
+    font-size: 24px;
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box h3 {
+    font-size: 18px;
+    font-size: 1.2rem;
+  }
+}
+
+.invitation-section .invitation-box p {
+  font-size: 17px;
+  font-size: 1.13333rem;
+  margin-bottom: 2em;
+}
+
+@media (max-width: 991px) {
+  .invitation-section .invitation-box p {
+    font-size: 13px;
+    font-size: 0.86667rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .invitation-section .invitation-box p {
+    font-size: 12px;
+    font-size: 0.8rem;
+  }
+}
+
+
+.count-down-clock {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+#clock {
+  color: #fff;
+  overflow: hidden;
+}
+
+#clock > div {
+	width: 25%;
+	float: left;
+	text-align: center;
+	padding: 30px 15px 0;
+	color: rgb(200, 157, 156);
+}
+
+#clock .box > div {
+	font-family: "Great Vibes", cursive;
+	font-size: 4rem;
+	margin-bottom: 0.1em;
+	line-height: .8em;
+}
+
+@media (max-width: 1199px) {
+  #clock .box > div {
+    font-size: 52px;
+    font-size: 3.46667rem;
+  }
+}
+
+@media (max-width: 991px) {
+  #clock .box > div {
+    font-size: 30px;
+    font-size: 2rem;
+    line-height: 1.3em;
+  }
+}
+
+#clock .box span {
+  font-size: 14px;
+  font-size: 0.93333rem;
+  font-weight: 200;
+  font-weight: 500;
+}
+
+@media (max-width: 767px) {
+  #clock .box span {
+    font-size: 12px;
+    font-size: 0.8rem;
+  }
+}
+
+
+
+.simply-countdown {
+  /* The countdown */
+  margin-bottom: 2em;
+}
+
+.simply-countdown > .simply-section {
+  /* coutndown blocks */
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  /* background: rgba(241, 78, 149, 0.8); */
+  margin: 0 4px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  position: relative;
+  animation: pulse 1s ease infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.simply-countdown > .simply-section > div {
+  /* countdown block inner div */
+  display: table-cell;
+  vertical-align: middle;
+  height: 100px;
+  width: 100px;
+}
+
+.simply-countdown > .simply-section .simply-amount,
+.simply-countdown > .simply-section .simply-word {
+  display: block;
+  color: black;
+  /* amounts and words */
+}
+
+.simply-countdown > .simply-section .simply-amount {
+  font-size: 30px;
+  /* amounts */
+}
+
+.simply-countdown > .simply-section .simply-word {
+  color: black;
+  text-transform: uppercase;
+  font-size: 12px;
+  /* words */
+}
+
+@media screen and (max-width: 768px) {
+  .simply-countdown > .simply-section,
+  .simply-countdown > .simply-section > div {
+    height: 50px;
+    width: 50px;
+  }
+  .simply-countdown > .simply-section .simply-amount {
+    font-size: 15px;
+    /* amounts */
+  }
+  .simply-countdown > .simply-section .simply-word {
+    font-size: 9px;
+  }
+}
+
